# oglaf-feed-bot

./: .gitignore  Dockerfile  README.md  currency-converter-bot.py  extensions.py  main.py  pyproject.toml  requirements.txt  settings.py
.github/: build.yml
.github/workflows/: build.yml  docker-image.yml
