[project]
name = "oglaf-feed-bot"
version = "1.0.0"
description = "Telegram bot for broadcasting oglaf comic strips"
authors = [{name = "Nyaaa", email = "1457047+Nyaaa@users.noreply.github.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.13.5",
    "python-dotenv>=1.1.1",
]

[tool.ruff]
line-length = 110
preview = true

[tool.ruff.lint]
select = [
    'E', 'F', 'UP', 'NPY', 'SIM', 'ICN', 'C4', 'A', 'B', 'ANN', 'N', 'I', 'Q', 'RSE', 'FA',
    'W', 'PL', 'RET', 'FURB', 'RUF', 'PERF', 'PIE', 'ARG', 'PTH', 'PD', 'PGH', 'TRY', 'FLY', 'ICN',
]
